# tracelane

./: .gitattributes  .gitignore  .gitleaks.toml  AI_DISCLOSURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  VERSIONING.md  deny.toml  osv-scanner.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml
.claude/agents/: benchmark-runner.md  changelog-writer.md  docs-writer.md  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/: README.md
crates/gateway/: Cargo.toml  README.md
crates/gateway/benches/: gateway_throughput.rs  rate_limiter.rs
crates/gateway/src/: admin_audit.rs  audit.rs  audit_export.rs  audit_keys.rs  audit_pubkey.rs  audit_retention.rs  audit_self_verify.rs  auto_rollback.rs  byok.rs  canary.rs  circuit_breaker.rs  clickhouse_query.rs  entitlement_cache.rs  key_routes.rs  kill_switch.rs  lib.rs  main.rs  otlp_emit.rs  payment.rs  pricing.rs  prompt_history.rs  prompt_router.rs  prompt_routes.rs  rate_limiter.rs  rejection_metrics.rs  retention_sweep.rs  server.rs  ssrf_guard.rs  tool_analytics.rs  trace_reads.rs  untrusted_data.rs
crates/gateway/src/alerts/: checker.rs  mod.rs  routes.rs
crates/gateway/src/audit_format/: mod.rs
crates/gateway/src/auth/: api_key.rs  jwks.rs  mod.rs  org_tenant_cache.rs  workos_webhook.rs
crates/gateway/src/billing/: checkout.rs  meter.rs  mod.rs  polar_client.rs  portal.rs  webhook.rs
crates/gateway/src/byok_api/: mod.rs  provider_keys_api.rs
crates/gateway/src/db/: api_keys.rs  audit_chain_state.rs  mod.rs  provider_keys.rs  tenants.rs  webhook_events.rs
crates/gateway/src/guardrail/: capability.rs  context.rs  dispatcher.rs  engine.rs  metrics.rs  mod.rs  outcome.rs  rail.rs  recorder.rs  registry_loader.rs  streaming.rs  verdict.rs
crates/gateway/src/guardrail/rails/: mod.rs  r1_cost.rs  r2_secrets_pii.rs  r3_tool_safety.rs  r4_trifecta.rs  r5_format.rs  r6_sysprompt_leak.rs  r7_topic_competitor.rs  r8_injection.rs
crates/gateway/src/predictive/: a2a_validator.rs  a2ui_validator.rs  browser_capture.rs  captcha.rs  mcp_hash_watcher.rs  mod.rs  pr8_lite_argument_drift.rs  prompt_guard.rs  prompt_injection.rs  slm_judge.rs  stuck_loop.rs  taint_tracker.rs  tool_definition_drift.rs  tool_schema_validator.rs  trajectory_guard.rs
crates/gateway/src/providers/: anthropic.rs  azure.rs  bedrock.rs  behavioral_tests.rs  cohere.rs  failover.rs  google.rs  mod.rs  openai.rs  smoke_tests.rs  vertex.rs  wasm_plugin.rs
crates/gateway/tests/: clickhouse_persister_integration.rs  failover_chaos.rs  postgres_tenant_integration.rs  providers_smoke.rs  rate_limit_chaos.rs  span_publish_integration.rs
crates/ingest/: Cargo.toml  README.md  build.rs
crates/ingest/benches/: cardinality.rs  limits.rs  sampler.rs
crates/ingest/proto/: workload.proto
crates/ingest/src/: auth.rs  cardinality.rs  clickhouse_writer.rs  config.rs  db.rs  disk_guard.rs  federation.rs  lib.rs  limits.rs  main.rs  nats_consumer.rs  otlp_decode.rs  otlp_receiver.rs  per_trace_ceiling.rs  quota.rs  r2_batcher.rs  rrweb_enricher.rs  span_envelope.rs  spire_client.rs  spire_mock.rs  spire_proto.rs  tail_sampler.rs  tenant_config.rs  tls.rs
crates/ingest/tests/: spiffe_auth_test.rs
crates/mcp-rs/: Cargo.toml  README.md
crates/mcp-rs/src/: lib.rs
crates/policy/: Cargo.toml  README.md
crates/policy/src/: engine.rs  lib.rs  pii.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: lib.rs  model.rs  redact.rs  self_host.rs  span.rs  tenant.rs
crates/tracelane-audit-cli/: Cargo.toml  README.md
crates/tracelane-audit-cli/src/: main.rs
docs/: api-reference.md  architecture.md  audit-format.md  cli.md  mcp-server.md  onboarding.md  predictive-guardrails.md  providers.md  quickstart.md
evals/: FLAKY.md  README.md  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
evals/audit-ledger/: anchor-vectors.meta.json  anchored.v1.ndjson  boundary-numbers.v2-legacy.ndjson  boundary-numbers.v2_1.ndjson  eval-verdict.ndjson  forged-anchor.ndjson  generate_anchor_vectors.py  good.ndjson  no-anchor.ndjson  tampered.ndjson
evals/ci/: mock-provider.mjs
evals/fault-tolerance/: FT-01.eval.ts  FT-02.eval.ts  FT-03.eval.ts  FT-04.eval.ts  FT-05.eval.ts  FT-06.eval.ts  FT-07.eval.ts  FT-08.eval.ts  FT-09.eval.ts  FT-10-concurrent-promotion-rollback.eval.ts  INDEX.md
evals/fixtures/: public-spec.md
evals/gateway-correctness/: GC-001.eval.ts  GC-002.eval.ts  GC-003.eval.ts  GC-004.eval.ts  GC-005.eval.ts  GC-DISPATCH-ERROR.eval.ts  GC-TRACE-LOOP.eval.ts  INDEX.md
evals/ingest-schema/: IS-001.eval.ts
evals/orchestrator/: __init__.py  cli.py  fixtures.py  models.py  otel.py  runner.py  watch.py
evals/orchestrator/tests/: test_fixtures.py  test_models.py  test_runner.py
evals/pain-points/: PP-AUDIT-TAMPER-DETECT.eval.ts  PP-CANARY.eval.ts  PP-CARDINALITY-EXPLOSION.eval.ts  PP-CIRCUIT-BREAKER.eval.ts  PP-DETERMINISTIC-ROLLBACK.eval.ts  PP-ENTITLEMENT-CACHE.eval.ts  PP-G1.eval.ts  PP-G2.eval.ts  PP-G3.eval.ts  PP-G4.eval.ts  PP-G5.eval.ts  PP-G6.eval.ts  PP-G7.eval.ts  PP-G8.eval.ts  PP-O1.eval.ts  PP-O10.eval.ts  PP-O11.eval.ts  PP-O12.eval.ts  PP-O13.eval.ts  PP-O2.eval.ts  PP-O3.eval.ts  PP-O4.eval.ts  PP-O5.eval.ts  PP-O6.eval.ts  PP-O7.eval.ts  PP-O8.eval.ts  PP-O9.eval.ts  PP-OP1.eval.ts  PP-OP2.eval.ts  PP-OVERSIZE-ATTR.eval.ts  PP-OVERSIZE-SPAN.eval.ts  PP-P1.eval.ts  PP-P10.eval.ts  PP-P11.eval.ts  PP-P12.eval.ts  PP-P13.eval.ts  PP-P14.eval.ts  PP-P15.eval.ts  PP-P2.eval.ts  PP-P3.eval.ts  (+29 more)
evals/pii-redaction/: PIR-001.eval.ts
evals/prompt-injection/: PI-001.eval.ts
evals/src/: harness.ts  live-harness.ts  quota-mock.ts  runner.ts
ml/: README.md
ml/prompt_guard/: __init__.py  pyproject.toml  serve.py
ml/slm_judge/: deploy_modal.py  distill.py  export_onnx.py  pyproject.toml
ml/trajectory_guard/: dataset.py  export_onnx.py  model.py  pyproject.toml  train.py
scripts/: apply-migration-03.sh  apply-migration-pg.sh  eval-gate-marketing.mjs  eval-gate-marketing.test.mjs  pre-public-push.sh  verify-all.sh
(+396 files in other folders)
