[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tracelane-evals"
version = "0.1.0"
description = "Tracelane eval orchestrator — unified API over DeepEval, Ragas, and Inspect AI"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
 "pydantic>=2.7.0",
 "deepeval>=1.4.0",
 "ragas>=0.1.18",
 "inspect-ai>=0.3.0",
 "rich>=13.7.0",
 "click>=8.1.7",
 "httpx>=0.27.0",
 "anyio>=4.4.0",
 "structlog>=24.1.0",
 "opentelemetry-sdk>=1.25.0",
 "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[project.optional-dependencies]
dev = [
 "pytest>=8.2.0",
 "pytest-asyncio>=0.23.7",
 "ruff>=0.4.7",
]

[project.scripts]
tracelane-eval = "orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["orchestrator/tests"]
