[package]
name = "tracelane-mcp-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust MCP client for the Tracelane gateway"
publish = false # internal workspace crate, not published to crates.io

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracelane-shared = { path = "../shared" }
