[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tracelane-prompt-guard"
version = "0.1.0"
description = "Llama Prompt Guard 2 22M ONNX inference sidecar for Tracelane gateway (PR6)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
 "numpy>=1.26.0",
 "onnxruntime>=1.18.0",
 "fastapi>=0.111.0",
 "uvicorn[standard]>=0.29.0",
 "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
 "pytest>=8.2.0",
 "pytest-asyncio>=0.23.0",
 "httpx>=0.27.0",
 "ruff>=0.4.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
