[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tracelane-slm-judge"
version = "0.1.0"
description = "1B encoder SLM judge distilled from Llama-Guard 8B + NemoGuard 8B"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
 "torch>=2.3.0",
 "transformers>=4.41.0",
 "peft>=0.11.0",
 "accelerate>=0.30.0",
 "datasets>=2.19.0",
 "onnx>=1.16.0",
 "onnxruntime-gpu>=1.18.0",
 "pydantic>=2.7.0",
 "structlog>=24.1.0",
 "rich>=13.7.0",
 "click>=8.1.7",
 "modal>=0.62.0",
]

[project.optional-dependencies]
dev = [
 "pytest>=8.2.0",
 "ruff>=0.4.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
